[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Enemy4/spritesheet49.png" type="Texture" id=1]
[ext_resource path="res://Enemy4.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2420, 550, 605 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3025, 550, 605 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3630, 550, 605 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 550, 605 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1815, 550, 605 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4235, 550, 605 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2420, 550, 605 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1210, 550, 605 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 550, 605 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 605, 550, 605 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2420, 550, 605 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4235, 550, 605 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1815, 550, 605 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 550, 605 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "vertical_idle",
"speed": 6.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": false,
"name": "vertical_shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "spin_vertical",
"speed": 6.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "diagonal_shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "diagonal_idle",
"speed": 6.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "spin_diagonal",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 60, 65 )

[node name="Enemy4" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 12 )
animation = "vertical_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 26 )
shape = SubResource( 13 )

[node name="Vertical" type="Node2D" parent="."]

[node name="Position2D3" type="Position2D" parent="Vertical"]
position = Vector2( 47, -9 )

[node name="Position2D4" type="Position2D" parent="Vertical"]
position = Vector2( -6, 41 )

[node name="Position2D" type="Position2D" parent="Vertical"]
position = Vector2( -60, 0 )

[node name="Position2D2" type="Position2D" parent="Vertical"]
position = Vector2( -3, -38 )

[node name="Diagonal" type="Node2D" parent="."]

[node name="Position2D3" type="Position2D" parent="Diagonal"]
position = Vector2( 50, 23 )

[node name="Position2D4" type="Position2D" parent="Diagonal"]
position = Vector2( -57, 34 )

[node name="Position2D" type="Position2D" parent="Diagonal"]
position = Vector2( -50, -31 )

[node name="Position2D2" type="Position2D" parent="Diagonal"]
position = Vector2( 54, -38 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SpinTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
